[gd_scene load_steps=14 format=2]

[ext_resource path="res://objects/TouchBalloon.gd" type="Script" id=1]
[ext_resource path="res://sfx/globoexplotando02.wav" type="AudioStream" id=2]
[ext_resource path="res://gfx/timer/timer_00.png" type="Texture" id=3]
[ext_resource path="res://gfx/timer/timer_01.png" type="Texture" id=4]
[ext_resource path="res://gfx/timer/timer_02.png" type="Texture" id=5]
[ext_resource path="res://gfx/timer/timer_03.png" type="Texture" id=6]
[ext_resource path="res://gfx/timer/timer_04.png" type="Texture" id=7]
[ext_resource path="res://gfx/timer/timer_05.png" type="Texture" id=8]
[ext_resource path="res://gfx/timer/timer_05b.png" type="Texture" id=9]
[ext_resource path="res://gfx/timer/timer_05c.png" type="Texture" id=10]
[ext_resource path="res://gfx/timer/timer_06.png" type="Texture" id=11]

[sub_resource type="Curve2D" id=2]
_data = {
"points": PoolVector2Array( -27.9539, 423.968, 27.9539, -423.968, 442.238, 464.117, 0, -326.129, 0, 326.129, 1360.06, 403.55, 32.6129, 270.221, -32.6129, -270.221, 456.214, 510.707 )
}

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 3 ), ExtResource( 4 ), ExtResource( 5 ), ExtResource( 6 ), ExtResource( 7 ), ExtResource( 8 ), ExtResource( 9 ), ExtResource( 10 ), ExtResource( 11 ) ],
"loop": false,
"name": "explode",
"speed": 12.0
} ]

[node name="PezGlobo" type="Node2D"]
script = ExtResource( 1 )

[node name="Bang" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )

[node name="RutaNado" type="Path2D" parent="."]
position = Vector2( 37.2717, -13.9768 )
curve = SubResource( 2 )

[node name="BichosNadando" type="PathFollow2D" parent="RutaNado"]
position = Vector2( 442.238, 464.117 )
rotation = -1.49789

[node name="ItemPez" type="Node2D" parent="RutaNado/BichosNadando"]
position = Vector2( -391.609, -471.675 )
rotation = 0.169422

[node name="Explosion" type="AnimatedSprite" parent="RutaNado/BichosNadando/ItemPez"]
light_mask = 2
position = Vector2( 461.24, 437.945 )
frames = SubResource( 1 )
animation = "explode"

[node name="TouchZone" type="TouchScreenButton" parent="RutaNado/BichosNadando/ItemPez"]
light_mask = 2
normal = ExtResource( 3 )
[connection signal="pressed" from="RutaNado/BichosNadando/ItemPez/TouchZone" to="." method="_on_TouchScreenButton_pressed"]
